Fixing bug 116843. image.x and .y were mapped to image.offsetLeft and .offsetTop and due to changes to .offset* that mapping broke image.x and .y so this makes image.x and .y work as expected. Also do some random cleanup. r=jaggernaut@netscape.com, sr=vidur@netscape.com